--- a/views/screens/img.pug
+++ b/views/screens/img.pug
@@ -1,9 +1,9 @@
 extends ../layout/base.pug
 
 block content 
-    form(action="/", method="post")
+    form(action="/", method="get")
         button 홈으로가기
     form(action="/createpost", method="post")      
-        input(type="text" name="name")
-        input(type="text" name="size")
+        input(type="text" name="name" required)
+        input(type="text" name="size" required)
         input(type="submit" value="작성")
